# llm

./: .gitignore  flight.db  pyproject.toml  requirements.txt  scraper.py
AI_Tutor/: 1.py  2.py
Brochure/: 1.py  2.py
Gradio/: 1.py  AAASQLite.py  AirlineAIAssistant.py  BuisnessChatbot.py  MMAAATech.py  MultiModalAAA.py  brochure_ui.py  brochure_ui_test.py  chatbotGradioUI.py  setup_db.py
LLMShowdown/: 1.ipynb  2.ipynb  main.cpp
MFM/: 1.py
Multi_Agent/: 1.py  2.py  3.py
RAG/: 1.ipynb  2.ipynb  3.ipynb  app.py
RAG/implementation/: answer.py  ingest.py
testing_ollama/: test1.py  test2.py
testing_somee/: scraper.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py
tokenizer/: 1.py
