[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.7.0",
    "ipython>=9.14.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
